# routes/index.js
@@ -41,11 +41,13 @@ router.delete("/itens/:id", itensControler.deleteItem); //Route to delete item
 
 router.get("/login", passport.authenticate("github"), (req, res) => {});
 
-router.get("/logout", function(req, resw, next){
+router.get("/logout", function(req, res, next){
     req.logOut(function(err){
         if (err) { return next(err);}
     });
-
+    res.redirect("/");
 });
+
+
 
 module.exports = router;
